# sw_planets_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
db/: Dockerfile  db_planets.sql
sw_planets_api/: app.py  main.py  planet.py
sw_planets_api/models/: db.py  planet.py
sw_planets_api/services/: star_wars_api_service.py
tests/: conftest.py  test_Planet.py  test_app.py  test_planet.py
tests/models/: test_planet.py
tests/services/: test_star_wars_api_service.py
